test/fixtures/warnings/redefinition.txt
redefinition.j:7:1: error: 'foo' previously defined as a global
@class foo
^
redefinition.j:1:9: note: definition is here:
@global foo
        ^
redefinition.j:10:1: error: 'foo' previously defined as a global
@implementation foo
^
redefinition.j:1:9: note: definition is here:
@global foo
        ^
redefinition.j:14:1: error: 'foo' previously defined as a global
@protocol foo
^
redefinition.j:1:9: note: definition is here:
@global foo
        ^
redefinition.j:27:1: error: 'Global' previously defined as a global
@class Global
^
redefinition.j:21:1: note: definition is here:
Global = "global";
^
redefinition.j:30:1: error: 'Global' previously defined as a global
@implementation Global
^
redefinition.j:21:1: note: definition is here:
Global = "global";
^
redefinition.j:34:1: error: 'Global' previously defined as a global
@protocol Global
^
redefinition.j:21:1: note: definition is here:
Global = "global";
^
redefinition.j:47:1: error: 'Foo' previously defined as a class
@global Foo
^
redefinition.j:38:1: note: definition is here:
@class Foo
^
redefinition.j:50:1: error: 'FooBar' previously defined as a class
@global FooBar
^
redefinition.j:40:1: note: definition is here:
@implementation FooBar
^
redefinition.j:53:1: error: 'Foo' previously defined as a class
Foo = "foo";
^
redefinition.j:38:1: note: definition is here:
@class Foo
^
redefinition.j:56:1: error: 'FooBar' previously defined as a class
FooBar = "foo";
^
redefinition.j:40:1: note: definition is here:
@implementation FooBar
^
redefinition.j:59:1: error: 'FooBar' previously defined as a class
@protocol FooBar
^
redefinition.j:40:1: note: definition is here:
@implementation FooBar
^
redefinition.j:67:1: error: 'Protocol' previously defined as a protocol
@global Protocol
^
redefinition.j:63:1: note: definition is here:
@protocol Protocol
^
redefinition.j:70:1: error: 'Protocol' previously defined as a protocol
@class Protocol
^
redefinition.j:63:1: note: definition is here:
@protocol Protocol
^
redefinition.j:73:1: error: 'Protocol' previously defined as a protocol
@implementation Protocol
^
redefinition.j:63:1: note: definition is here:
@protocol Protocol
^
redefinition.j:77:1: error: 'Protocol' previously defined as a protocol
Protocol = "protocol";
^
redefinition.j:63:1: note: definition is here:
@protocol Protocol
^

15 errors generated.
